--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <h1> "REEEEEEEEEEEE" </h1>
-    <p> "Hello world this is Achinth Bharadwaj. Go eat biryani" </p>
+  <h1> <center> REEEEEEEEEEEE </center> </h1>
+    <p style="font-family: garamond; color = blue"> Hello world this is Achinth
+      Bharadwaj. Go eat biryani </p>
   </body>
 </html>
-  
