--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+<style>
+  body {background-color:#E6E6FA}
+</style>
 <body>
   <h1> <center> REEEEEEEEEEEE </center> </h1>
-    <p style="font-family: garamond; color = blue"> Hello world this is Achinth
+    <p style="font-family:garamond;color:blue;"> Hello world this is Achinth
       Bharadwaj. Go eat biryani </p>
   </body>
 </html>
