--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </style>
 <body>
   <h1> <center> REEEEEEEEEEEE </center> </h1>
-    <p style="font-family:garamond;color:blue;"> Hello world this is Achinth
+    <p style="font-family:garamond;color:teal;"> Hello world this is Achinth
       Bharadwaj. Go eat biryani </p>
   </body>
 </html>
