--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <style>
-  body {background-color:#E6E6FA}
+  body {background-color:#FFFACD;}
+  p {font: verdana;
+  color: teal;
+  }
 </style>
 <body>
-  <h1> <center> REEEEEEEEEEEE </center> </h1>
-    <p style="font-family:garamond;color:teal;"> Hello world this is Achinth
-      Bharadwaj. Go eat biryani </p>
+  <h1> <center> REEEEEEEEEEEE HIRE ME REEEEEEEEEEEE</center> </h1>
+    <p> Hello world this is Achinth Bharadwaj. Go eat biryani </p>
+    <p> Here is my <a href="https://www.facebook.com/achinthbharadwaj">
+      facebook </a> </p>
+    <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
+    </p>
+
+    <h1> <center style="font-size: 100px"> ALL HAIL LORD SHIBA INU </center>
+    </h1>
+
+    <img src="https://scontent.fblr1-3.fna.fbcdn.net/v/t1.0-9/61542305_1537088666427319_5384646098662981632_n.jpg?_nc_cat=102&_nc_oc=AQnZlZ0dVSFHaTxorw8xFVba2_SKz6xBhv-HY72rU097jOL3XjqQgTYBsNxIVv_vtsw0KOelWg2x-cqwiI7jMmhY&_nc_ht=scontent.fblr1-3.fna&oh=1dad0b8d1002c07ee34e743e4eea6e89&oe=5D992629"; alt="only the true god of the real world">
   </body>
 </html>
