--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   color: teal;
   }
 </style>
+<title> It's the only Achinth to have ever attended UBC I swear </title>
 <body>
   <h1> <center> REEEEEEEEEEEE HIRE ME REEEEEEEEEEEE</center> </h1>
     <p> Hello world this is Achinth Bharadwaj. Go eat biryani </p>
@@ -18,6 +19,6 @@
     </h1>
   </body>
    <img src="https://scontent.fblr1-3.fna.fbcdn.net/v/t1.0-9/61542305_1537088666427319_5384646098662981632_n.jpg?_nc_cat=102&_nc_oc=AQnZlZ0dVSFHaTxorw8xFVba2_SKz6xBhv-HY72rU097jOL3XjqQgTYBsNxIVv_vtsw0KOelWg2x-cqwiI7jMmhY&_nc_ht=scontent.fblr1-3.fna&oh=1dad0b8d1002c07ee34e743e4eea6e89&oe=5D992629";
-    alt="only the true god of the real world" class="center">
+    alt="only the true god of the real world" align="middle">
 
 </html>
