--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <style>
-  body {background-color:#F6F0E8;}
-  p {font: verdana;
-  color: teal;
+  body {background-color:#F8F4EE;}
+  p {font:verdana;color:teal;}
+  .center {
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
   }
 </style>
 <title> It's the only Achinth to have ever attended UBC I swear </title>
@@ -18,7 +22,7 @@
     <h1> <center style="font-size: 100px"> ALL HAIL LORD SHIBA INU </center>
     </h1>
   </body>
-   <img src="https://scontent.fblr1-3.fna.fbcdn.net/v/t1.0-9/61542305_1537088666427319_5384646098662981632_n.jpg?_nc_cat=102&_nc_oc=AQnZlZ0dVSFHaTxorw8xFVba2_SKz6xBhv-HY72rU097jOL3XjqQgTYBsNxIVv_vtsw0KOelWg2x-cqwiI7jMmhY&_nc_ht=scontent.fblr1-3.fna&oh=1dad0b8d1002c07ee34e743e4eea6e89&oe=5D992629";
-    alt="only the true god of the real world" align="middle">
+<img src="https://scontent.fblr1-3.fna.fbcdn.net/v/t1.0-9/61542305_1537088666427319_5384646098662981632_n.jpg?_nc_cat=102&_nc_oc=AQnZlZ0dVSFHaTxorw8xFVba2_SKz6xBhv-HY72rU097jOL3XjqQgTYBsNxIVv_vtsw0KOelWg2x-cqwiI7jMmhY&_nc_ht=scontent.fblr1-3.fna&oh=1dad0b8d1002c07ee34e743e4eea6e89&oe=5D992629";
+    alt="only the true god of the real world" class="center">
 
 </html>
