--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <style>
   body {background-color:#F8F4EE;}
-  p {font:verdana;color:teal;}
+  p {font:verdana;color:#494875;}
   .center {
     display:block;
     margin-left: auto;
