--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <style>
+  h1 {color:#494875}
   body {background-color:#F8F4EE;}
   p {font:verdana;color:#494875;}
   .center {
