--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <style>
   h1 {color:#494875}
+
   body {background-color:#F8F4EE;}
-  p {font:verdana;color:#494875;}
+
+  p {
+    font:15px verdana, sans-serif;
+    color:#494875;
+  }
+
   .center {
     display:block;
     margin-left: auto;
