--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   body {background-color:#F8F4EE;}
 
   p {
-    font:15px verdana, sans-serif;
+    font:georgia 15px verdana sans-serif;
     color:#494875;
   }
 
