--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <style>
-  h1 {color:#494875}
+  h1 {color:#494875;
+  font: 100px georgia sans-serif;
+}
 
   body {background-color:#F8F4EE;}
 
@@ -26,7 +28,7 @@
     <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
     </p>
 
-    <h1> <center style="font-size: 100px"> ALL HAIL LORD SHIBA INU </center>
+    <h1> <center> ALL HAIL LORD SHIBA INU </center>
     </h1>
   </body>
 <img src="https://scontent.fblr1-3.fna.fbcdn.net/v/t1.0-9/61542305_1537088666427319_5384646098662981632_n.jpg?_nc_cat=102&_nc_oc=AQnZlZ0dVSFHaTxorw8xFVba2_SKz6xBhv-HY72rU097jOL3XjqQgTYBsNxIVv_vtsw0KOelWg2x-cqwiI7jMmhY&_nc_ht=scontent.fblr1-3.fna&oh=1dad0b8d1002c07ee34e743e4eea6e89&oe=5D992629";
