--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 <style>
   h1 {color:#494875;
-  font: 100px georgia sans-serif;
+  font: normal normal normal 100px sans-serif;
 }
 
   body {background-color:#F8F4EE;}
 
   p {
-    font:georgia 15px verdana sans-serif;
     color:#494875;
   }
 
