--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <style>
   h1 {color:#494875;
-  font: normal normal normal 100px sans-serif;
+  font: 100px sans-serif;
 }
 
   body {background-color:#F8F4EE;}
 
   p {
     color:#494875;
+    font: 20px sans-serif;
   }
 
   .center {
