--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <style>
   h1 {color:#494875;
-  font: 80px georgia sans-serif;
+  font: 80px sans-serif;
 }
 
   body {background-color:#F8F4EE;}
 
   p {
     color:#494875;
-    font: 20px/1px georgia sans-serif;
+    font: 20px/1px sans-serif;
   }
 
   .center {
