--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <style>
-  h1 {color:#494875;
+  h1 {color:#696969;
   font: 80px sans-serif;
 }
 
   body {background-color:#F8F4EE;}
 
   p {
-    color:#494875;
+    color:#696969;
     font: 20px/1px sans-serif;
   }
 
@@ -19,19 +19,15 @@
     width: 50%;
   }
 </style>
-<title> It's the only Achinth to have ever attended UBC I swear </title>
+<title> Achinth Bharadwaj </title>
 <body>
-  <h1> <center> REEEEEEEEEEEE HIRE ME REEEEEEEEEEEE</center> </h1>
-    <p> Hello world this is Achinth Bharadwaj. Go eat biryani </p>
+  <h1> <center> Hey, I'm Achinth! </center> </h1>
+    <p> </p>
     <p> Here is my <a href="https://www.facebook.com/achinthbharadwaj">
       facebook </a> </p>
     <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
     </p>
-
-    <h1> <center> ALL HAIL LORD SHIBA INU </center>
-    </h1>
+    <p> <a href="shiba-worship.html"> gang </a> </p>
   </body>
-<img src="https://scontent.fblr1-3.fna.fbcdn.net/v/t1.0-9/61542305_1537088666427319_5384646098662981632_n.jpg?_nc_cat=102&_nc_oc=AQnZlZ0dVSFHaTxorw8xFVba2_SKz6xBhv-HY72rU097jOL3XjqQgTYBsNxIVv_vtsw0KOelWg2x-cqwiI7jMmhY&_nc_ht=scontent.fblr1-3.fna&oh=1dad0b8d1002c07ee34e743e4eea6e89&oe=5D992629";
-    alt="only the true god of the real world" class="center">
 
 </html>
