--- a/shiba-worship.html
+++ b/shiba-worship.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <style>
+body {
+  background-image: url();
+}
  center {
-   font: 80px sans-serif;
+   font: 80px georgia sans-serif;
  }
 
 .center {
@@ -20,5 +23,6 @@
 
 <body>
   <img src="https://scontent.fblr1-3.fna.fbcdn.net/v/t1.0-9/61452045_1943163102453786_223818781678370816_n.jpg?_nc_cat=102&_nc_oc=AQmGoj5bCUndFa46wFecjqlS-pEi0EAdMpT8Ck7M-XO10fag1C1mNqIgS7XPVOcrdxF7vPvjSD00blExsn5-9b8d&_nc_ht=scontent.fblr1-3.fna&oh=9d00d55879036fe63593ac7dc60a6b34&oe=5D511E34" alt="the shiba god" class="center">
+</body>
 
 </html>
