--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   body {background-color:#F8F4EE;}
 
   p {
+    text-align: center;
     color:#696969;
     font: 20px/1px sans-serif;
   }
@@ -22,7 +23,6 @@
 <title> Achinth Bharadwaj </title>
 <body>
   <h1> <center> Hey, I'm Achinth! </center> </h1>
-    <p> </p>
     <p> Here is my <a href="https://www.facebook.com/achinthbharadwaj">
       facebook </a> </p>
     <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
