--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 <body>
   <h1> <center> Hey, I'm Achinth! </center> </h1>
     <p> Here is my <a href="https://www.facebook.com/achinthbharadwaj">
-      facebook </a> </p>
+      Facebook </a> </p>
     <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
     </p>
+    <P> Here is my <a href=""
     <p> <a href="shiba-worship.html"> gang </a> </p>
   </body>
 
