--- a/index.html
+++ b/index.html
@@ -23,12 +23,21 @@
 <title> Achinth Bharadwaj </title>
 <body>
   <h1> <center> Hey, I'm Achinth! </center> </h1>
+
+  <p> Hi! I'm Achinth, an eighteen-year-old sophomore at the
+      University of British Columbia. </p>
     <p> Here is my <a href="https://www.facebook.com/achinthbharadwaj">
       Facebook </a> </p>
     <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
     </p>
-    <P> Here is my <a href=""
+    <P> Here is my
+      <a href="https://www.linkedin.com/in/achinth-bharadwaj-410b0a180/">
+        LinkedIn </a>
     <p> <a href="shiba-worship.html"> gang </a> </p>
+    <p> Feel free to contact me at <a href="mailto:achinth.bharadwaj@gmail.com">
+      achinth.bharadwaj@gmail.com </a> and send me a meme or two! </p>
   </body>
+
+
 
 </html>
