--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     color:#696969;
     font: 20px/1px sans-serif;
   }
+  img {
+    height: 300px;
+    width: 300px;
+    display: block;
+    margin: 0 auto;
+  }
 
   .center {
     display:block;
@@ -26,6 +32,7 @@
 
   <p> Hi! I'm Achinth, an eighteen-year-old sophomore at the
       University of British Columbia. </p>
+      <img src="https://instagram.fblr1-3.fna.fbcdn.net/vp/4766bacea17b1731634a4c2ec65b8732/5D7ACDF5/t51.2885-19/s320x320/58630003_2204797562950281_1418095190643572736_n.jpg?_nc_ht=instagram.fblr1-3.fna.fbcdn.net">
     <p> Here is my <a href="https://www.facebook.com/achinthbharadwaj">
       Facebook </a> </p>
     <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
