--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     width: 50%;
   }
 </style>
+<meta name="viewport" content="width=device-width, initial-scale = 1.0">  
 <title> Achinth Bharadwaj </title>
 <body>
   <h1> <center> Hey, I'm Achinth! </center> </h1>
