--- a/shiba-worship.html
+++ b/shiba-worship.html
@@ -16,6 +16,8 @@ body {
 }
 
 </style>
+<meta name="viewport" content="width=device-width, initial-scale = 1.0">
+
 
 <title> The only god </title>
 
