--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <style>
-  h1 {color:#696969;
+  h1 {color:#3b3a30;
   font: 50px sans-serif;
 }
 
@@ -9,7 +9,7 @@
 
   p {
     text-align: center;
-    color:#696969;
+    color:#3b3a30;
     font: 16px/1px sans-serif;
   }
   img {
