--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     text-align: center;
     color:#3b3a30;
     font: 16px/1px sans-serif;
+    line-height: 10px;
   }
   img {
     height: 300px;
