--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
   body {background-color:#F8F4EE;}
 
+  div {
+    text-align: center;
+    color:#3b3a30;
+    font: 16px/1px sans-serif;
+    line-height: 20px;
+  }
   p {
     text-align: center;
     color:#3b3a30;
@@ -27,15 +33,23 @@
     margin-right: auto;
     width: 50%;
   }
+  .rwd-break {
+    display: block;
+  }
+  @media only screen and (max-width: 600px) {
+    [class*="rwd-break"] {
+      display: none;
+    }
+  }
 </style>
 <meta name="viewport" content="width=device-width, initial-scale = 1.0">
 <title> Achinth Bharadwaj </title>
 <body>
   <h1> <center> Hey, I'm Achinth! </center> </h1>
 
-  <p> Hi! I'm Achinth, an eighteen-year-old sophomore at the
+  <div> <br class="rwd-break"> Hi! I'm Achinth, an eighteen-year-old sophomore at the
       University of British Columbia studying computer science and
-      statistics. </p>
+      statistics. </div>
       <img src="https://instagram.fblr1-3.fna.fbcdn.net/vp/4766bacea17b1731634a4c2ec65b8732/5D7ACDF5/t51.2885-19/s320x320/58630003_2204797562950281_1418095190643572736_n.jpg?_nc_ht=instagram.fblr1-3.fna.fbcdn.net">
     <p> Here is my <a href="https://www.facebook.com/achinthbharadwaj">
       Facebook </a> </p>
@@ -44,8 +58,8 @@
     <P> Here is my
       <a href="https://www.linkedin.com/in/achinth-bharadwaj-410b0a180/">
         LinkedIn </a>
-    <p> <a href="shiba-worship.html"> gang </a> </p>
-    <p> Feel free to contact me at <a href="mailto:achinth.bharadwaj@gmail.com">
+    <p> Click <a href="shiba-worship.html"> here </a> to see the only god</p>
+    <p> <br class="rwd-break"> Feel free to contact me at <a href="mailto:achinth.bharadwaj@gmail.com">
       achinth.bharadwaj@gmail.com </a> and send me a meme or two! </p>
   </body>
 
