--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     font: 16px/1px sans-serif;
     line-height: 10px;
   }
-  img {
+  .imgofme {
     height: 300px;
     width: 300px;
     display: block;
@@ -40,6 +40,9 @@
     [class*="rwd-break"] {
       display: none;
     }
+    [class*="p"] {
+      line-height: 10px;
+    }
   }
 </style>
 <meta name="viewport" content="width=device-width, initial-scale = 1.0">
@@ -50,7 +53,7 @@
   <div> <br class="rwd-break"> Hi! I'm Achinth, an eighteen-year-old sophomore at the
       University of British Columbia studying computer science and
       statistics. </div>
-      <img src="https://instagram.fblr1-3.fna.fbcdn.net/vp/4766bacea17b1731634a4c2ec65b8732/5D7ACDF5/t51.2885-19/s320x320/58630003_2204797562950281_1418095190643572736_n.jpg?_nc_ht=instagram.fblr1-3.fna.fbcdn.net">
+      <img class="imgofme" src="https://instagram.fblr1-3.fna.fbcdn.net/vp/4766bacea17b1731634a4c2ec65b8732/5D7ACDF5/t51.2885-19/s320x320/58630003_2204797562950281_1418095190643572736_n.jpg?_nc_ht=instagram.fblr1-3.fna.fbcdn.net">
     <p> Here is my <a href="https://www.facebook.com/achinthbharadwaj">
       Facebook </a> </p>
     <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
