--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
     font: 16px/1px sans-serif;
     line-height: 20px;
   }
+
   p {
     text-align: center;
     color:#3b3a30;
     font: 16px/1px sans-serif;
     line-height: 10px;
   }
+
   .imgofme {
-    height: 300px;
-    width: 300px;
+    line-height: 40px
+    height: 250px;
+    width: 250px;
     display: block;
     margin: 0 auto;
     border-radius: 50%;
@@ -41,7 +44,7 @@
       display: none;
     }
     [class*="p"] {
-      line-height: 10px;
+      line-height: 5px;
     }
   }
 </style>
@@ -50,7 +53,7 @@
 <body>
   <h1> <center> Hey, I'm Achinth! </center> </h1>
 
-  <div> <br class="rwd-break"> Hi! I'm Achinth, an eighteen-year-old sophomore at the
+  <div class="h"> <br class="rwd-break"> Hi! I'm Achinth, an eighteen-year-old sophomore at the
       University of British Columbia studying computer science and
       statistics. </div>
       <img class="imgofme" src="https://instagram.fblr1-3.fna.fbcdn.net/vp/4766bacea17b1731634a4c2ec65b8732/5D7ACDF5/t51.2885-19/s320x320/58630003_2204797562950281_1418095190643572736_n.jpg?_nc_ht=instagram.fblr1-3.fna.fbcdn.net">
@@ -62,8 +65,8 @@
       <a href="https://www.linkedin.com/in/achinth-bharadwaj-410b0a180/">
         LinkedIn </a>
     <p> Click <a href="shiba-worship.html"> here </a> to see the only god</p>
-    <p> <br class="rwd-break"> Feel free to contact me at <a href="mailto:achinth.bharadwaj@gmail.com">
-      achinth.bharadwaj@gmail.com </a> and send me a meme or two! </p>
+    <div> <br class="rwd-break"> Feel free to contact me at <a href="mailto:achinth.bharadwaj@gmail.com">
+      achinth.bharadwaj@gmail.com </a> and send me a meme or two! </div>
   </body>
 
 
