--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <a href="https://www.linkedin.com/in/achinth-bharadwaj-410b0a180/">
         LinkedIn </a>
     <p> Click <a href="shiba-worship.html"> here </a> to see the only god</p>
-    <div> <br class="rwd-break"> Feel free to contact me at <a href="mailto:achinth.bharadwaj@gmail.com">
+    <div class="h"> <br class="rwd-break"> Feel free to contact me at <a href="mailto:achinth.bharadwaj@gmail.com">
       achinth.bharadwaj@gmail.com </a> and send me a meme or two! </div>
   </body>
 
