--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
     }
   }
 </style>
-<meta name="viewport" content="width=device-width, initial-scale = 1.0">
+<meta name="viewport" content="width=device-width, initial-scale = 1.0" class="rwd-break">
 <title> Achinth Bharadwaj </title>
 <body>
   <h1> <center> Hey, I'm Achinth! </center> </h1>
 
-  <div class="h"> <br class="rwd-break"> Hi! I'm Achinth, an eighteen-year-old sophomore at the
+  <div> <br> Hi! I'm Achinth, an eighteen-year-old sophomore at the
       University of British Columbia studying computer science and
       statistics. </div>
       <img class="imgofme" src="https://instagram.fblr1-3.fna.fbcdn.net/vp/4766bacea17b1731634a4c2ec65b8732/5D7ACDF5/t51.2885-19/s320x320/58630003_2204797562950281_1418095190643572736_n.jpg?_nc_ht=instagram.fblr1-3.fna.fbcdn.net">
@@ -65,7 +65,7 @@
       <a href="https://www.linkedin.com/in/achinth-bharadwaj-410b0a180/">
         LinkedIn </a>
     <p> Click <a href="shiba-worship.html"> here </a> to see the only god</p>
-    <div class="h"> <br class="rwd-break"> Feel free to contact me at <a href="mailto:achinth.bharadwaj@gmail.com">
+    <div> <br> Feel free to contact me at <a href="mailto:achinth.bharadwaj@gmail.com">
       achinth.bharadwaj@gmail.com </a> and send me a meme or two! </div>
   </body>
 
