--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     [class*="rwd-break"] {
       display: none;
     }
-    [class*="p"] {
+    [class*="div"] {
       line-height: 15px;
     }
   }
