--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     text-align: center;
     color:#3b3a30;
     font: 16px/1px sans-serif;
-    line-height: 5px;
+    line-height: 10px;
   }
 
   .imgofme {
@@ -43,10 +43,9 @@
     [class*="rwd-break"] {
       display: none;
     }
-    [class*="div"] {
-      line-height: 15px;
-    }
-  }
+    [class*="div"] {line-height: 10px;}
+}
+
 </style>
 <meta name="viewport" content="width=device-width, initial-scale = 1.0" class="rwd-break">
 <title> Achinth Bharadwaj </title>
