--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       University of British Columbia studying computer science and
       statistics. </div>
       <br>
-      <img class="imgofme" src="https://instagram.fblr1-3.fna.fbcdn.net/vp/4766bacea17b1731634a4c2ec65b8732/5D7ACDF5/t51.2885-19/s320x320/58630003_2204797562950281_1418095190643572736_n.jpg?_nc_ht=instagram.fblr1-3.fna.fbcdn.net">
+      <img class="imgofme" src="https://scontent.fyvr4-1.fna.fbcdn.net/v/t1.0-9/65298295_1559608117508707_4750700799695257600_n.jpg?_nc_cat=105&_nc_oc=AQn3vhiSVqZ68OQ1uOmnCfcwTUzBHRG53U9nOnM9vBh8tI_RkH--lau0i6jvweM4TUk&_nc_ht=scontent.fyvr4-1.fna&oh=4d4d06886f0b3e4d0b9fc6209f380124&oe=5DD7821D">
     <p> Here is my <a href="https://www.facebook.com/achinthbharadwaj">
       Facebook </a> </p>
     <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
