--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       University of British Columbia studying computer science and
       statistics. </div>
       <br>
-      <p> Here is my <a href="resume.html"> resume </a> </p>
+      <p> Here is my <a href="Achinth Bharadwaj Co-op Resume.pdf"> resume </a> </p>
       <img class="imgofme" src="https://scontent.fyvr4-1.fna.fbcdn.net/v/t1.0-9/65298295_1559608117508707_4750700799695257600_n.jpg?_nc_cat=105&_nc_oc=AQn3vhiSVqZ68OQ1uOmnCfcwTUzBHRG53U9nOnM9vBh8tI_RkH--lau0i6jvweM4TUk&_nc_ht=scontent.fyvr4-1.fna&oh=4d4d06886f0b3e4d0b9fc6209f380124&oe=5DD7821D">
     <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
     </p>
