--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
   <h1> <center> Hey, I'm Achinth! </center> </h1>
 
-  <div> <br> Hi! I'm Achinth, an eighteen-year-old sophomore at the
+  <div> <br> Hi! I'm Achinth, a nineteen-year-old sophomore at the
       University of British Columbia studying computer science and
       statistics. </div>
       <br>
