--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <meta name="viewport" content="width=device-width, initial-scale = 1.0" class="rwd-break">
 <title> Achinth Bharadwaj </title>
 <body>
-  <h1> <center> Hey, I'm Achinth! </center> </h1>
+  <h1> <center> Hello World, I'm Achinth! </center> </h1>
 
   <div> <br> Hi! I'm Achinth, a nineteen-year-old sophomore at the
       University of British Columbia studying computer science and
