--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   }
 
   .imgofme {
-    line-height: 40px
-    height: 250px;
-    width: 250px;
+    /* line-height: 250px */
+    height: 279px;
+    width: 418px;
     display: block;
     margin: 0 auto;
-    border-radius: 50%;
+    border-radius: 60%;
   }
 
   .center {
@@ -58,7 +58,7 @@
       University of British Columbia studying computer science and
       statistics. </div>
       <br>
-      <img class="imgofme" src="me.jpg" alt="Achinth's beautiful face">
+      <img src="achinthEpic.JPG" alt="the achinth epic style" class="imgofme">
       <p> Here is my <a href="ABR copy.pdf"> Resume </a> </p>
     <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
     </p>
