--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   }
 
   .imgofme {
-    /* line-height: 250px */
+    line-height: 250px
     height: 279px;
     width: 418px;
     display: block;
