--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       University of British Columbia studying computer science and
       statistics. </div>
       <br>
-      <img src="achinthEpic.JPG" alt="the achinth epic style" class="imgofme">
+      <img src="achinthEpic.jpg" alt="the achinth epic style" class="imgofme">
       <p> Here is my <a href="ABR copy.pdf"> Resume </a> </p>
     <p> Here is my <a href="https://github.com/bigdaddytwochinz"> GitHub </a>
     </p>
