--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title> Achinth Bharadwaj </title>
+		<title>Achinth Bharadwaj!</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
@@ -25,28 +25,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-
-				<!--section 1 - homepage -->
-				<section>
-				</section>
-
-				<!--section 2 - what do I like -->
-				<section>
-				</section>
-
-				<!--section 3 - what do I offer -->
-				<section>
-				</section>
-
-				<!--section 4 - contact me! -->
-				<section>
-				</section>
-
-				<!--section 5 - memes -->
-				<section>
-				</section>
-
-
+				<section>Slide 1</section>
+				<section>Slide 2</section>
 			</div>
 		</div>
 
