--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
+
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
 				<!-- section 1- welcome -->
-				<section>
+				<section data-background-image="assets/achinthEpic.jpg" data-background-opacity =0.4>
+
 				</section>
 
 				<!-- section 1- welcome -->
