--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
 				<!-- section 1- welcome -->
 				<section data-background-image="assets/achinthEpic.jpg" data-background-opacity =0.4>
 
+					<section>
+						<h3 style="vertical-align=top">
+							Hello world!
+						</h3>
+					</section>
+
+						<section>
+							<h6>
+								Hi! I'm Achinth, a nineteen-year-old sophomore at the University
+								 of British Columbia studying computer science and statistics.
+								 I'm also an intern with Boeing in my hometown, Vancouver!
+							</h6>
+						</section>
+
 				</section>
 
 				<!-- section 1- welcome -->
