I love this meme

--- a/index.html
+++ b/index.html
@@ -43,9 +43,29 @@
 							</p>
 						</section>
 
+						<section>
+							<p> Feel free to:
+								<a href="mailto:achinth.bharadwaj@gmail.com?Subject=Hello%20Achinth!">
+									<p>
+										Email me
+									</p>
+							</a>
+
+							<a href="tel:+1 (778) 319-8140">
+								<p>
+									Call me
+								</p>
+						</a>
+						</p>
+
+						</section>
+
+
+
+
 				</section>
 
-				<!-- section 1- welcome -->
+				<!-- section 2- what do I offer -->
 				<section>
 				</section>
 
