Front page done"

--- a/index.html
+++ b/index.html
@@ -43,20 +43,25 @@
 							</p>
 						</section>
 
-						<section>
-							<p> Feel free to:
-								<a href="mailto:achinth.bharadwaj@gmail.com?Subject=Hello%20Achinth!">
-									<p>
-										Email me
-									</p>
-							</a>
 
-							<a href="tel:+1 (778) 319-8140">
-								<p>
-									Call me
-								</p>
-						</a>
-						</p>
+
+						<section>
+							<ul>
+								Check out my:
+								<li>  <a href="htps://www.github.com/bigdaddytwochinz"> Github! </a></li>
+								<li>  <a href="htps://www.linkedin.com/achinthnb"> Linkedin! </a></li>
+								<li>  <a href="assets/Bharadwaj_Achinth.pdf"> Resume! </a></li>
+							</ul>
+
+						<br> </br>
+
+
+							<ul>
+								You can fire me:
+								<li> <a href="mailto:achinth.bharadwaj@alumni.ubc.ca?Subject=Hi%20Achinth!"> an email </a></li>
+								 or
+								<li> <a href="tel:+1 (778) 319-8140"> a call! </a></li>
+							</ul>
 
 						</section>
 
