--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						<h3 style="vertical-align=top">
 							Hello world!
 						</h3>
+						<p> (click the arrows for some fun!)</p>
 					</section>
 
 						<section>
@@ -65,21 +66,106 @@
 
 						</section>
 
-
-
-
 				</section>
 
 				<!-- section 2- what do I offer -->
+
+					<section>
+						<h3> What do I offer? </h3>
+						<div class="row">
+
+							<div class="mid">
+							 Languages:
+							 <ul>
+
+								 <li> Java </li>
+								 <li> Python </li>
+								 <li> HTML/CSS/Javascript</li>
+								 <li> R </li>
+								 <li> C++ </li>
+
+							 </ul>
+							</div>
+
+							<div class="mid">
+								 Technologies:
+
+								 <ul>
+
+									 <li> Git </li>
+									 <li> Node.JS </li>
+									 <li> React.JS/Native </li>
+									 <li> Vue.JS </li>
+									 <li> Tensorflow </li>
+
+								 </ul>
+
+							</div>
+
+						</div>
+
+						<br>
+						<br>
+						<br>
+						<br>
+
+
+					</section>
+
+				<!-- section 3- experience -->
 				<section>
+
+
+					<section data-background-image="https://i.pinimg.com/originals/68/83/58/6883588c46d58007614c57109a9a5996.jpg">
+						<header style="color:black"> Where I've been! </header>
+
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+
+					<p style="color:black"> I'm currently an intern with the digitial solutions and analytics
+					team over at Boeing Vancouver. </p>
+
+					</section>
+
+					<section data-background-image="https://www.ubclaunchpad.com/img/share-logo.png">
+						<header style="color:white"> Where I've been! </header>
+
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
+
+						Over at UBC Launch Pad, my fellow developers and I
+							build applications with various tech stacks in an agile
+							environment.
+						</>
+
+					</section>
+
 				</section>
 
-				<!-- section 1- welcome -->
+				<!-- section 4- projects -->
 				<section>
-				</section>
 
-				<!-- section 1- welcome -->
-				<section>
+					<section>
+					</section>
+
+					<section>
+					</section>
+
+					<section>
+					</section>
+
 				</section>
 
 			</div>
