--- a/index.html
+++ b/index.html
@@ -146,14 +146,68 @@
 				<section>
 
 					<section>
+						<p style="color=#00FF00"> TypeMeNot </p>
+						<p style="color=#FFFFFF"> Wolfram Award winnder @ nwHacks 2020! </p>
+						<div class="row">
+
+							<div class="mid">
+
+							</div>
+
+							<div class="mid">
+							</div>
+
+						</div>
 					</section>
 
 					<section>
+						<p style="color=#00FF00"> TypeMeNot </p>
+						<p style="color=#FFFFFF"> Wolfram Award winnder @ nwHacks 2020! </p>
+						<div class="row">
+
+							<div class="mid">
+							</div>
+
+							<div class="mid">
+							</div>
+
+						</div>
 					</section>
 
 					<section>
+						<p style="color=#00FF00"> TypeMeNot </p>
+						<p style="color=#FFFFFF"> Wolfram Award winnder @ nwHacks 2020! </p>
+						<div class="row">
+
+							<div class="mid">
+							</div>
+
+							<div class="mid">
+							</div>
+
+						</div>
 					</section>
 
+						<section>
+							<p style="color=#00FF00"> TypeMeNot </p>
+							<p style="color=#FFFFFF"> Wolfram Award winnder @ nwHacks 2020! </p>
+							<div class="row">
+
+								<div class="mid">
+								</div>
+
+								<div class="mid">
+								</div>
+
+							</div>
+
+						</section>
+					</section>
+
+				<!--section 5: with love -->
+				<section>
+					<h5 style="text-transform:none"> made with 💖, by Achinth Bharadwaj
+						© 2020. </h5>
 				</section>
 
 			</div>
