done as of March 27 2020

--- a/index.html
+++ b/index.html
@@ -146,57 +146,97 @@
 				<section>
 
 					<section>
-						<p style="color=#00FF00"> TypeMeNot </p>
-						<p style="color=#FFFFFF"> Wolfram Award winnder @ nwHacks 2020! </p>
+						<p style="color:#00FF00"> TypeMeNot </p>
+						<p style="color:#FFFFFF"> Wolfram Award winnder @ nwHacks 2020! </p>
 						<div class="row">
 
 							<div class="mid">
+								<img src="assets/typemenot.png" alt="TypeMeNot">
 
 							</div>
 
 							<div class="mid">
+								<p style="font-size:28px"> TypeMeNot was designed as an
+								automated solution to moderation on websites using a Google API
+								for sentiment analysis. This is a Chrome 	extension that merely
+								stops users from typing something not-safe-for-work. </p>
+								<br>
+								<p style="font-size:28px"> Check out our <a href="https://devpost.com/software/TypeMeNot2"> devpost  </a>
+								site!</p>
 							</div>
 
 						</div>
 					</section>
 
 					<section>
-						<p style="color=#00FF00"> TypeMeNot </p>
-						<p style="color=#FFFFFF"> Wolfram Award winnder @ nwHacks 2020! </p>
+						<p style="color:#00FF00"> Footprint 🌳 </p>
+						<p style="color:#FFFFFF"> UBC Launch Pad! </p>
 						<div class="row">
 
 							<div class="mid">
+								<img src="assets/footprint.png" alt="Footprint" style="width:50%;height:50%">
 							</div>
 
 							<div class="mid">
+								<p style="font-size:28px"> Footprint was build by UBC Launch Pad
+								as a React Native solution that enables users to scan food items
+								using computer vision andobtain the corresponding ecological foot
+								print of the product. It's
+								high time in the world that we have a large-scale deployable and
+								personal solution for everything we can do to curb
+							  global warming.  </p>
+
+								<p style="font-size:28px">Check out our <a href="https://github.com/ubclaunchpad/Footprint"> Github </a> repo!</p>
 							</div>
 
 						</div>
 					</section>
 
 					<section>
-						<p style="color=#00FF00"> TypeMeNot </p>
-						<p style="color=#FFFFFF"> Wolfram Award winnder @ nwHacks 2020! </p>
+						<p style="color:#00FF00"> Predicting cervical cancer risk from lifestyle choices </p>
+						<p style="color:#FFFFFF"> (my first data science project!) </p>
 						<div class="row">
 
 							<div class="mid">
+								<img src="assets/cervdsci.png" alt="Cervical Cancer">
 							</div>
 
 							<div class="mid">
+								<p style="font-size:28px"> This was my first data science project,
+								where I aimed to understand how to use data science tech stacks
+								to generate insights! I worked with R, tidyverse and a
+			 					UCI dataset in order to
+							determine whether or not this dataset could determine the accuracy of
+						 	the prevalence of cervical cancer from lifestyle choices.
+						</p>
+
+								<p style="font-size:28px"> Check out my <a href="https://github.com/bigdaddytwochinz/CervicalCancerAnalysis">
+								Github </a> repo! </p>
 							</div>
 
 						</div>
 					</section>
 
 						<section>
-							<p style="color=#00FF00"> TypeMeNot </p>
-							<p style="color=#FFFFFF"> Wolfram Award winnder @ nwHacks 2020! </p>
+							<p style="color:#00FF00"> Chess on desktop </p>
+							<p style="color:#FFFFFF"> (my first ever project!) </p>
 							<div class="row">
 
 								<div class="mid">
+									<img src="assets/chess.png" alt="Chess">
 								</div>
 
 								<div class="mid">
+									<p style="font-size:28px"> This one gets an honourable mention
+									since this was the project which gave me the confidence to pursue
+									software design and engineering as a part of my career. I just
+									built this with simple OOP concepts and String readers! It's <thead>
+										reason I can do all sorts of cool stuff with other things!
+									</thead>
+								 </p>
+									<br>
+									<p style="font-size:28px"> Check out its <a href="https://github.com/bigdaddytwochinz/Chess">
+									Github </a> repo! </p>
 								</div>
 
 							</div>
