--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta content='width=device-width, initial-scale=1' name='viewport'/>
 
 		<title> Achinth Bharadwaj </title>
 
@@ -248,7 +249,8 @@
 				<section>
 					<h5 style="text-transform:none"> made with 💖, by Achinth Bharadwaj
 						© 2020. </h5>
-				</section>
+				</section
+
 
 			</div>
 		</div>
