Fixed image bugs on phone

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<meta content='width=device-width, initial-scale=1' name='viewport'/>
 
 		<title> Achinth Bharadwaj </title>
 
@@ -103,38 +102,27 @@
 
 				<!-- section 3- experience -->
 				<section>
+					<header style="color:white"> Where I've been! </header>
 
 
-					<section data-background-image="https://i.pinimg.com/originals/68/83/58/6883588c46d58007614c57109a9a5996.jpg">
-						<header style="color:black"> Where I've been! </header>
+					<section>
 
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
+						<img src="https://i.pinimg.com/originals/68/83/58/6883588c46d58007614c57109a9a5996.jpg"
+						style="width:80%;height:80%">
 
-					<p style="color:black"> I'm currently an intern with the digitial solutions and analytics
+					<p style="color:white"> I'm currently an intern with the digitial solutions and analytics
 					team over at Boeing Vancouver. </p>
 
 					</section>
 
-					<section data-background-image="https://www.ubclaunchpad.com/img/share-logo.png">
-						<header style="color:white"> Where I've been! </header>
+					<section>
 
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
+
+						<img src="https://www.ubclaunchpad.com/img/share-logo.png"
+						style="width:60%;height:60%">
 						<br>
 
-						Over at UBC Launch Pad, my fellow developers and I
+						Over at UBC Launch Pad, we devs
 							build applications with various tech stacks in an agile
 							environment.
 						</>
