--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 						<section>
 							<ul>
 								Check out my:
-								<li>  <a href="htps://www.github.com/bigdaddytwochinz"> Github! </a></li>
-								<li>  <a href="htps://www.linkedin.com/achinthnb"> Linkedin! </a></li>
+								<li>  <a href="https://www.github.com/bigdaddytwochinz"> Github! </a></li>
+								<li>  <a href="https://www.linkedin.com/achinthnb"> Linkedin! </a></li>
 								<li>  <a href="assets/Bharadwaj_Achinth.pdf"> Resume! </a></li>
 							</ul>
 
