--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<title> Achinth Bharadwaj </title>
 
-		<link rel="stylesheet" href="css/reset.css">
+
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/blood.css">
 
@@ -26,6 +26,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+
 				<!-- section 1- welcome -->
 				<section data-background-image="assets/achinthEpic.jpg" data-background-opacity =0.4>
 
@@ -237,10 +238,11 @@
 				<section>
 					<h5 style="text-transform:none"> made with 💖, by Achinth Bharadwaj
 						© 2020. </h5>
-				</section
+				</section>
 
 
 			</div>
+
 		</div>
 
 		<script src="js/reveal.js"></script>
