small link error

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<ul>
 								Check out my:
 								<li>  <a href="https://www.github.com/bigdaddytwochinz"> Github! </a></li>
-								<li>  <a href="https://www.linkedin.com/achinthnb"> Linkedin! </a></li>
+								<li>  <a href="https://www.linkedin.com/in/achinthnb"> Linkedin! </a></li>
 								<li>  <a href="assets/Bharadwaj_Achinth.pdf"> Resume! </a></li>
 							</ul>
 
