--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						</div>
 
 						<div class="mid">
-							<p style="font-size:28px"> Footprint was build by UBC Launch Pad
+							<p style="font-size:28px"> Footprint was built by UBC Launch Pad
 							as a React Native solution that enables users to scan food items
 							using computer vision andobtain the corresponding ecological foot
 							print of the product. It's
