--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<section>
 					<h3 style="vertical-align=top">
-						Hello World! I'm <div id='typewriter'> </div>
+						Hello World! I'm <h3 id='typewriter'> </h3>
 					</h3>
 					<p> (click the arrows for some fun!)</p>
 				</section>
@@ -121,8 +121,8 @@
 				<section>
 
 
-					<img src="https://www.ubclaunchpad.com/img/share-logo.png"
-					style="width:60%;height:60%">
+					<img src="assets/rocket.png"
+					style="width:40%;height:40%">
 					<br>
 
 					Over at UBC Launch Pad, we devs
@@ -222,9 +222,9 @@
 								<p style="font-size:28px"> This one gets an honourable mention
 								since this was the project which gave me the confidence to pursue
 								software design and engineering as a part of my career. I just
-								built this with simple OOP concepts and String readers! It's <thead>
-									reason I can do all sorts of cool stuff with other things!
-								</thead>
+								built this with simple OOP concepts and String readers! It's
+									the reason I can do all sorts of cool stuff with other things!
+
 							 </p>
 								<br>
 								<p style="font-size:28px"> Check out its <a href="https://github.com/bigdaddytwochinz/Chess">
@@ -286,25 +286,27 @@
 
 					// normal options
 					selector: '.background',
-					maxParticles: 100,
+					maxParticles: 175,
 					color: '#cfb87c',
-					connectParticles: true,
+					connectParticles: false,
+					sizeVariations: 7,
+
 
 					// options for breakpoints
 					responsive: [{
 						breakpoint: 768,
 						options: {
-							maxParticles: 50,
+						maxParticles: 50,
 						}
 					}, {
 						breakpoint: 425,
 						options: {
-							maxParticles: 25,
+						maxParticles: 25,
 						}
 					}, {
 						breakpoint: 320,
 						options: {
-							maxParticles: 0
+						maxParticles: 0
 
 							// disables particles.js
 						}
@@ -316,10 +318,10 @@
  <script src='js/dist/core.js'></script>
  <script type="text/javascript">
 	 const instance = new Typewriter('#typewriter', {
-		 strings: ['<span class="wrapper"><span class="span-1">Achinth.</span>',
-			 '<span class="wrapper"><strong>an aspiring engineer.</strong></span>',
-			 '<span className="wrapper"><strong>an ultimate frisbee player.</strong></span>',
-		 '<span class="wrapper"><strong>an avid eater.</strong></span>'],
+		 strings: ['<span class="wrapper" style="color:#e7ad52"><span class="span-1">Achinth.</span>',
+			 '<span class="wrapper" style="color:#e7ad52"><strong>an aspiring engineer.</strong></span>',
+			 '<span className="wrapper" style="color:#e7ad52"><strong>an ultimate frisbee player.</strong></span>',
+		 '<span class="wrapper" style="color:#e7ad52"><strong>an avid eater.</strong></span>'],
 		 autoStart: true,
 		 loop: true,
 	 });
