added more bubbles

--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
 					maxParticles: 175,
 					color: '#cfb87c',
 					connectParticles: false,
-					sizeVariations: 7,
+					sizeVariations: 5,
+					speed = 0.44,
 
 
 					// options for breakpoints
