--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 			<!-- section 3- experience -->
 			<section>
-				<header style="color:white"> Where I've been! </header>
+				<header style="color:e7ad52"> Where I've been! </header>
 
 
 				<section>
