--- a/index.html
+++ b/index.html
@@ -49,23 +49,76 @@
 
 
 					<section>
-						<ul>
-							Check out my:
-							<li>  <a href="https://www.github.com/bigdaddytwochinz"> Github! </a></li>
-							<li>  <a href="https://www.linkedin.com/in/achinthnb"> Linkedin! </a></li>
-							<li>  <a href="assets/Bharadwaj_Achinth.pdf"> Resume! </a></li>
-						</ul>
+						<p> Check it all out! </p>
 
-					<br> </br>
+						<div style="display:flex;justify-content:center;">
 
 
-						<ul>
-							You can fire me:
-							<li> <a href="mailto:achinth.bharadwaj@alumni.ubc.ca?Subject=Hi%20Achinth!"> an email </a></li>
-							 or
-							<li> <a href="tel:+1 (778) 319-8140"> a call! </a></li>
-						</ul>
+							<a href="https://www.github.com/bigdaddytwochinz"
+							style="padding:35px">
+								  <img
+							  	src="assets/github-icon.png"
+								  alt="github-icon"
+							  	style="background:none; border:none; box-shadow:none;
+							  	width:60px; height:60px;"></img>
+							</a>
 
+
+							<a href="https://www.linkedin.com/in/achinthnb"
+							style="padding:35px">
+									  <img
+								  	src="assets/linkedin-icon.png"
+								  	alt="linkedin-icon"
+								  	style="background:none; border:none; box-shadow:none;
+								  	width:70px; height:70px;"
+								  	></img>
+							</a>
+
+							<a href="assets/Bharadwaj_Achinth.pdf">
+							</a>
+
+
+							<a href="mailto:achinth.bharadwaj@alumni.ubc.ca?Subject=Hi%20Achinth!"
+							style="padding:35px">
+								<img
+								src="assets/mail-icon.png"
+								alt="mail-icon"
+								style="background:none;border:none; box-shadow:none;
+								width:90px; height:50px;"
+								></img>
+							</a>
+
+
+							<a href="tel:+1 (778) 319-8140"
+							style="padding:35px">
+								<img
+								src="assets/phone-icon.png"
+								alt="phone-icon"
+								style="background:none;border:none; box-shadow:none;
+								width:50px; height:50px;"
+								></img>
+							</a>
+
+
+							<a href="https://medium.com/@bigdaddytwochinz"
+							style="padding:35px">
+								    <img
+										src="assets/medium-icon.png"
+										alt="medium-icon"
+										style="background:none;border:none; box-shadow:none;
+										width:120px; height:60px;"></img>
+							</a>
+
+							<a href="assets/Bharadwaj_Achinth.pdf"
+							style="padding:35px">
+								    <img
+										src="assets/resume-icon.gif"
+										alt="resume-icon"
+										style="background:none;border:none; box-shadow:none;
+										width:60px; height:60px;"></img>
+							</a>
+
+						</div>
 					</section>
 
 			</section>
@@ -300,17 +353,17 @@
 					responsive: [{
 						breakpoint: 768,
 						options: {
-						maxParticles: 50,
+						maxParticles: 100,
 						}
 					}, {
 						breakpoint: 425,
 						options: {
-						maxParticles: 25,
+						maxParticles: 67,
 						}
 					}, {
 						breakpoint: 320,
 						options: {
-						maxParticles: 0
+						maxParticles: 33
 
 							// disables particles.js
 						}
