changed coloudivs to orient contact by category

--- a/index.html
+++ b/index.html
@@ -74,9 +74,27 @@
 								  	></img>
 							</a>
 
-							<a href="assets/Bharadwaj_Achinth.pdf">
+							<a href="https://medium.com/@bigdaddytwochinz"
+							style="padding:35px">
+								    <img
+										src="assets/medium-icon.png"
+										alt="medium-icon"
+										style="background:none;border:none; box-shadow:none;
+										width:120px; height:60px;"></img>
 							</a>
 
+							<a href="assets/Bharadwaj_Achinth.pdf"
+							style="padding:35px">
+								    <img
+										src="assets/resume-icon.gif"
+										alt="resume-icon"
+										style="background:none;border:none; box-shadow:none;
+										width:60px; height:60px;"></img>
+							</a>
+						</div>
+
+						<p> and if you ever need to reach me: </p>
+						<div style="display:flex;justify-content:center;">
 
 							<a href="mailto:achinth.bharadwaj@alumni.ubc.ca?Subject=Hi%20Achinth!"
 							style="padding:35px">
@@ -97,25 +115,6 @@
 								style="background:none;border:none; box-shadow:none;
 								width:50px; height:50px;"
 								></img>
-							</a>
-
-
-							<a href="https://medium.com/@bigdaddytwochinz"
-							style="padding:35px">
-								    <img
-										src="assets/medium-icon.png"
-										alt="medium-icon"
-										style="background:none;border:none; box-shadow:none;
-										width:120px; height:60px;"></img>
-							</a>
-
-							<a href="assets/Bharadwaj_Achinth.pdf"
-							style="padding:35px">
-								    <img
-										src="assets/resume-icon.gif"
-										alt="resume-icon"
-										style="background:none;border:none; box-shadow:none;
-										width:60px; height:60px;"></img>
 							</a>
 
 						</div>
