fixed rendition issue of gif

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 			<!--section 5: with love -->
 			<section>
 				<div>
-					<iframe src="https://giphy.com/embed/3n6HE1MED6rV6"
+					<iframe src="assets/hottiehardy.gif"
 					width="480"
 					height="193"
 					frameBorder="0"
